# hyprtab

./: .gitignore  LICENSE  README.md  meson.build
src/: ipc.cpp  main.cpp  view.cpp  window.cpp
src/include/: icon.hpp  ipc.hpp  view.hpp  window.hpp
